--- a/style.css
+++ b/style.css
@@ -7,11 +7,45 @@
 .divCorpo{
     height: 100vh;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.divInput{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background: #533D8B;
+}
+
+.divInput > h1{
+    color: white;
+}
+
+.divInput > #input{
+    flex: 1;
+    max-height: 20%;
+    min-width: 60%;
+    border-radius: 15px;
+    border: #302450 solid;
+    background: none;
+    padding: 10px;
+    color: white;
+    word-wrap: break-word;  
+    white-space: pre-wrap;  
+    overflow-wrap: break-word;  
+}
+
+.divTecladoContainer{
+    position: relative;
+    bottom: 0;
+    width: 100vw;
 }
 
 .divTeclado{
-    position: fixed;
-    bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +54,7 @@
     padding: 2%;
     box-sizing: border-box;
     background-color: #63783D;
-    width: 100vw;
+    width: 100%;
 }
 
 .divTeclado-ul{       
@@ -32,7 +66,6 @@
     gap: 5px;  
 }
 
-
 .divTeclado-ul-li{
     display: flex;
     justify-content: center;
@@ -43,4 +76,9 @@
     color: white;
     border-radius: 0%;
     flex: 1;
+}
+
+.divTeclado-ul-li:hover{
+    border: #46532c solid;
+    box-sizing: border-box;
 }
